--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -1,91 +1,120 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.Line?>
-<?import javafx.scene.shape.MeshView?>
 <?import javafx.scene.text.*?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER" minHeight="400.0" minWidth="600.0"
-      xmlns="http://javafx.com/javafx/8.0.172-ea" fx:controller="org.usfirst.frc.team25.scouting.client.Controller">
+<GridPane xmlns:fx="http://javafx.com/fxml/1" minHeight="370.0" minWidth="820.0"
+          xmlns="http://javafx.com/javafx/8.0.172-ea"
+          fx:controller="org.usfirst.frc.team25.scouting.client.ui.Controller">
     <children>
-        <Pane prefHeight="80.0" prefWidth="600.0">
+        <Pane prefHeight="105.0" prefWidth="600.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
             <children>
-                <ImageView fitHeight="88.0" fitWidth="76.0" layoutX="-86.0" layoutY="2.0" pickOnBounds="true"
+                <ImageView fitHeight="88.0" fitWidth="76.0" layoutX="-86.0" layoutY="16.0" pickOnBounds="true"
                            preserveRatio="true" x="100.0">
                     <image>
                         <Image url="@../img/team_25_logo.png"/>
                     </image>
                 </ImageView>
-                <ImageView fitHeight="76.0" fitWidth="91.0" layoutX="108.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fitHeight="85.0" fitWidth="86.0" layoutX="108.0" layoutY="14.0" pickOnBounds="true"
+                           preserveRatio="true">
                     <image>
                         <Image url="@../img/deep_space_logo.png"/>
                     </image>
                 </ImageView>
-                <Button layoutX="198.0" layoutY="40.0" mnemonicParsing="false" text="Choose Data Folder"
-                        fx:id="chooseDataFolderButton"/>
-                <Text layoutX="200.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Scouting Client v3.0">
+                <Button fx:id="chooseDataFolderButton" layoutX="204.0" layoutY="53.0" mnemonicParsing="false"
+                        text="Choose Data Folder"/>
+                <Text layoutX="204.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0"
+                      text="Raider Robotix Scouting Client - v3.0">
                     <font>
                         <Font name="Calibri Bold" size="22.0"/>
                     </font>
                 </Text>
-                <Text layoutX="329.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0"
-                      text="C:/Users/sng/Documents/Raider Robotix">
+                <Text fx:id="dataDirectoryDisplay" layoutX="204.0" layoutY="98.0" strokeType="OUTSIDE" strokeWidth="0.0"
+                      text="&lt;DATA FOLDER PATH&gt;">
                     <font>
                         <Font name="Calibri" size="14.0"/>
                     </font>
                 </Text>
-                <Line endX="100.0" endY="-25.0" layoutY="100.0" startX="100.0" startY="-100.0"/>
+                <Line endX="100.0" endY="-25.0" layoutY="120.0" startX="100.0" startY="-100.0"/>
             </children>
         </Pane>
-        <MeshView/>
-        <Pane prefHeight="75.0" prefWidth="600.0">
+        <Pane prefHeight="108.0" prefWidth="600.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
             <children>
-                <Button layoutX="14.0" layoutY="0.0" mnemonicParsing="false" text="Generate Files"/>
-                <CheckBox layoutX="14.0" layoutY="35.0" mnemonicParsing="false" text="Combine JSON"/>
-                <CheckBox layoutX="126.0" layoutY="35.0" mnemonicParsing="false" text="Picklist"/>
-                <CheckBox layoutX="198.0" layoutY="35.0" mnemonicParsing="false" text="CSV"/>
-                <CheckBox layoutX="251.0" layoutY="35.0" mnemonicParsing="false" text="Fix errors"/>
-                <CheckBox layoutX="329.0" layoutY="35.0" mnemonicParsing="false" text="Backup JSON"/>
-                <CheckBox layoutX="437.0" layoutY="35.0" mnemonicParsing="false" text="Predictions"/>
-            </children>
-        </Pane>
-        <Pane prefHeight="100.0" prefWidth="600.0">
-            <children>
-
-                <RadioButton layoutX="14.0" layoutY="63.0" mnemonicParsing="false" text="Team-based"/>
-                <RadioButton layoutX="110.0" layoutY="63.0" mnemonicParsing="false" text="Alliance-based"/>
-                <TextField layoutX="200.0" layoutY="59.0" prefHeight="25.0" prefWidth="70.0"
-                           promptText="Team 1"/>
-                <TextField layoutX="280.0" layoutY="59.0" prefHeight="25.0" prefWidth="70.0"
-                           promptText="Team 2"/>
-                <TextField layoutX="360.0" layoutY="59.0" prefHeight="25.0" prefWidth="70.0"
-                           promptText="Team 3"/>
-                <Text layoutX="14.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0"
-                      text="Aggregate reports">
+                <Text layoutX="14.0" layoutY="28.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Data Processing">
                     <font>
                         <Font name="Calibri Bold" size="18.0"/>
                     </font>
                 </Text>
-                <Button layoutX="487.0" layoutY="59.0" mnemonicParsing="false" text="Generate"/>
+                <Button disable="true" layoutX="343.0" layoutY="50.0" mnemonicParsing="false" text="Generate Files"
+                        fx:id="generateFilesButton">
+                <CheckBox layoutX="14.0" layoutY="45.0" mnemonicParsing="false" text="Combine JSON"
+                          fx:id="combineJson"/>
+                <CheckBox layoutX="126.0" layoutY="45.0" mnemonicParsing="false" text="Picklists"
+                          fx:id="generatePicklists"/>
+                <CheckBox layoutX="126.0" layoutY="77.0" mnemonicParsing="false" text="CSV" fx:id="generateCsv"/>
+                <CheckBox layoutX="205.0" layoutY="46.0" mnemonicParsing="false" text="Fix errors" fx:id="fixErrors"/>
+                <CheckBox layoutX="14.0" layoutY="77.0" mnemonicParsing="false" text="Backup JSON" fx:id="backupJson"/>
+                <CheckBox layoutX="205.0" layoutY="77.0" mnemonicParsing="false" text="Predictions"
+                          fx:id="generatePredictions"/>
+            </children>
+        </Pane>
+        <Pane prefHeight="60.0" prefWidth="600.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
 
-            </children>
+            <RadioButton layoutX="14.0" layoutY="43.0" mnemonicParsing="false" selected="true" text="Team-based"/>
+            <RadioButton layoutX="110.0" layoutY="43.0" mnemonicParsing="false" text="Alliance-based"/>
+            <TextField layoutX="230.0" layoutY="39.0" prefHeight="25.0" prefWidth="70.0" promptText="Team 1"
+                       fx:id="analysisTeamOne"/>
+            <TextField disable="true" layoutX="308.0" layoutY="39.0" prefHeight="25.0" prefWidth="70.0"
+                       promptText="Team 2" fx:id="analysisTeamTwo"/>
+            <TextField disable="true" layoutX="388.0" layoutY="39.0" prefHeight="25.0" prefWidth="70.0"
+                       promptText="Team 3" fx:id="analysisTeamThree"/>
+            <Text layoutX="14.0" layoutY="28.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Aggregate reports">
+                <font>
+                    <Font name="Calibri Bold" size="18.0"/>
+                </font>
+            </Text>
+            <Button disable="true" layoutX="487.0" layoutY="39.0" mnemonicParsing="false" text="Display"
+                    fx:id="displayReportButton"/>
+
         </Pane>
-        <Pane prefHeight="94.0" prefWidth="594.0" GridPane.rowIndex="9">
-            <children>
-                <RadioButton layoutX="14.0" layoutY="63.0" mnemonicParsing="false" text="All events in current year"/>
-                <RadioButton layoutX="179.0" layoutY="63.0" mnemonicParsing="false" text="Individual event"/>
-                <TextField layoutX="300.0" layoutY="59.0" prefHeight="25.0" prefWidth="167.0"
-                           promptText="Team number or event code"/>
-                <Text layoutX="14.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0"
-                      text="Download The Blue Alliance Data">
-                    <font>
-                        <Font name="Calibri Bold" size="18.0"/>
-                    </font>
-                </Text>
-                <Button layoutX="487.0" layoutY="59.0" mnemonicParsing="false" text="Download"/>
-            </children>
+        <Pane prefHeight="85.0" prefWidth="600.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <RadioButton layoutX="14.0" layoutY="56.0" mnemonicParsing="false" text="All events in current year"
+                         fx:id="teamEventsDownload"/>
+            <RadioButton layoutX="179.0" layoutY="56.0" mnemonicParsing="false" text="Individual event"
+                         fx:id="allianceBasedReport"/>
+            <TextField layoutX="300.0" layoutY="52.0" prefHeight="25.0" prefWidth="167.0"
+                       promptText="Team number or event code" fx:id="teamNumEventCode"/>
+            <Text layoutX="14.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0"
+                  text="Download The Blue Alliance Data">
+                <font>
+                    <Font name="Calibri Bold" size="18.0"/>
+                </font>
+            </Text>
+            <Button disable="true" layoutX="487.0" layoutY="52.0" mnemonicParsing="false" text="Download"
+                    fx:id="downloadDataButton"/>
         </Pane>
+        <TextArea fx:id="statusTextBox" editable="false" prefHeight="350.0" prefWidth="200.0" wrapText="true"
+                  GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.rowSpan="4"
+                  GridPane.valignment="CENTER">
+            <GridPane.margin>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </GridPane.margin>
+        </TextArea>
     </children>
-</VBox>
+    <columnConstraints>
+        <ColumnConstraints/>
+        <ColumnConstraints/>
+        <ColumnConstraints/>
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+    </rowConstraints>
+</GridPane>
