--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -22,8 +22,8 @@
         </ImageView>
         <Button fx:id="chooseDataFolderButton" layoutX="204.0" layoutY="53.0" mnemonicParsing="false"
                 text="Choose Data Folder"/>
-        <Text fx:id="headerLabel" layoutX="204.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0"
-              text="Raider Robotix Scouting Client">
+        <Text layoutX="204.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0"
+              text="Raider Robotix Scouting Client - v3.21">
             <font>
                 <Font name="Calibri Bold" size="20.0"/>
             </font>
