--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -16,14 +16,14 @@
                    preserveRatio="true" x="100.0">
             <Image url="@../img/team_25_logo.png"/>
         </ImageView>
-        <ImageView fitHeight="85.0" fitWidth="86.0" layoutX="108.0" layoutY="14.0" pickOnBounds="true"
+        <ImageView fitHeight="85.0" fitWidth="86.0" layoutX="108.0" layoutY="24.0" pickOnBounds="true"
                    preserveRatio="true">
-            <Image url="@../img/deep_space_logo.png"/>
+            <Image url="@../img/rapid_react_logo.png"/>
         </ImageView>
         <Button fx:id="chooseDataFolderButton" layoutX="204.0" layoutY="53.0" mnemonicParsing="false"
                 text="Choose Data Folder"/>
         <Text layoutX="204.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0"
-              text="Raider Robotix Scouting Client - v3.21">
+              text="Raider Robotix Scouting Client - v3.31">
             <font>
                 <Font name="Calibri Bold" size="20.0"/>
             </font>
